# mcp-server-example

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  install.sh  mypy.ini  pyproject.toml
.github/: codecov.yml
.github/workflows/: ci.yml
scripts/: install.sh  run_integration_tests.sh  run_tests.sh  run_weather.sh  setup_env.sh  test_madrid.sh
src/weather/: __init__.py  __main__.py  weather.py
tests/: conftest.py  test_integration.py  test_madrid_coordinates.py  test_weather.py  test_weather_tools.py
